--- a/projeto1/package.json
+++ b/projeto1/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint --fix ./testes-estaticos",
-    "test": "jest"
+    "test:watch": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
